# FitAI

./: .gitignore  CLAUDE.md  Product_prompt_to_gen.md  README.md  Uzb_meals.csv  id_to_slugs.json  package.json  pnpm-lock.yaml  products1.csv  products2.csv  unique_products.md  unmapped_slugs.txt  vercel.json
.claude/: settings.local.json
apps/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  index.py  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_enable_pg_trgm.py  002_initial_schema.py  003_trgm_indices.py
apps/api/app/: config.py  db.py  main.py
apps/api/app/models/: __init__.py  food.py  log.py  user.py
apps/api/app/routes/: auth.py  diary.py  foods.py  ingredients.py  users.py
apps/api/app/services/: compose.py  security.py  tdee.py
apps/api/data/: uz_ingredients.json  uz_recipes.json
apps/api/scripts/: etl_usda.py  seed_uz.py
design/: FitAI.html  HANDOFF_README.md  components.jsx  screens-a.jsx  screens-b.jsx  screens-c.jsx  screens-ds.jsx  tokens.jsx
docs/: AGENT_SKILL.md  FITAI_BLUEPRINT.md  HANDOFF.md  design_prompts.md  modern_design_prompts.md
infra/: docker-compose.yml
scratch/: categorize_slugs.py  categorized_missing_slugs.md  clean_image_names.txt  clean_image_names_v2.txt  file_list.txt  final_distribute.py  find_missing_slugs.py  food_pictures_list.txt  generate_html_tool.py  generate_mapping.py  generate_process_v2.py  id_to_slugs.json  map_already_generated.py  map_by_doc.py  missing_assets.txt  missing_final.txt  process_images.py  process_images_v2.py  prompts_to_copy.txt  (+5 more)
(+76 files in other folders)
